Proofs of evidence

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -48,6 +48,11 @@
             Service feedback form (example of LPA service feedback)
           </a>
         </li>
+        <li>
+          <a href="appeal/proofs-of-evidence">
+            Witnesses and timings / proofs of evidence
+          </a>
+        </li>
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
