Appellant procedure type in appeal details view

--- a/app/views/_includes/appellant/current-appeals.html
+++ b/app/views/_includes/appellant/current-appeals.html
@@ -36,7 +36,7 @@
     rows: [
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345260&action=">1341263</a>'
+          html: '<a href="/appeal/appeals/v1/appeal-details?appealCode=1345260&type=has&action=">1341263</a>'
         },
         {
           html: '12a Crossley Hall, Thornton Road, Bradford BD8 OJN'
@@ -48,13 +48,13 @@
           html: '6' | daysInFuture
         },
         {
-          html: '<a href="/manage/questionnaire-Householder appeal/v6/task-list?action=">Statement</a>',
+          html: '<a href="/appeal/final-comments/v4/final-comment-check">Final comment</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345260&action=">1333006</a>'
+          html: '<a href="/appeal/appeals/v1/appeal-details?appealCode=1345260&type=s78&action=">1333006</a>'
         },
         {
           html: '93 Greenhill Lane, Leeds Road, Bradford BD3 8DZ'
@@ -66,13 +66,13 @@
           html: '6' | daysInFuture
         },
         {
-          html: '<a href="/manage/questionnaire-Householder appeal/v6/task-list?action=">Final comment</a>',
+          html: '<a href="/appeal/final-comments/v4/final-comment-check">Final comment</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345172&action=&questionnaire=due">1333118</a>'
+          html: '<a href="/appeal/appeals/v1/appeal-details?appealCode=1345172&type=lbc&action=&questionnaire=due">1333118</a>'
         },
         {
           html: '72 Wash Way Road, Sale, Greater Manchester M32 8DZ'
@@ -84,7 +84,7 @@
           html: '22' | daysInFuture
         },
         {
-          html: '<a href="/manage/questionnaire-Householder appeal/v6/task-list?action="><span class="govuk-visually-hidden">Submit </span>Final comment</a>',
+          html: '<a href="/appeal/final-comments/v4/final-comment-check"><span class="govuk-visually-hidden">Submit </span>Final comment</a>',
           format: 'numeric'
         }
       ],
@@ -120,7 +120,8 @@
           html: '26' | daysInFuture
         },
         {
-
+          html: '<a href="">Continue</a>',
+          format: 'numeric'
         }
       ]
 
