--- a/app/views/_includes/appellant/submitted-appeals.html
+++ b/app/views/_includes/appellant/submitted-appeals.html
@@ -34,7 +34,7 @@
     rows: [
       [
         {
-          html: '<a href="v5/appeal-details?appealCode=1345264&action=">1322700</a>'
+          html: '<a href="/appeal/appeals/v1/appeal-details?appealCode=1322700&type=has&action=">1322700</a>'
         },
         {
           html: '36 Beverley Rd, Swinton, Pendlebury, Manchester M27 4HY'
@@ -50,7 +50,7 @@
       ],
       [
         {
-          html: '<a href="v5/appeal-details?appealCode=1345260&action=">1321273</a>'
+          html: '<a href="/appeal/appeals/v1/appeal-details?appealCode=1321273&type=ldc&action=">1321273</a>'
         },
         {
           html: '27 Buxton Rd, Hazel Grove, Stockport SK7 6AF'
@@ -66,7 +66,7 @@
       ],
       [
         {
-          html: '<a href="v5/appeal-details?appealCode=1345260&action=">1307294</a>'
+          html: '<a href="/appeal/appeals/v1/appeal-details?appealCode=1307294&type=s78&action=">1307294</a>'
         },
         {
           html: 'Oasis Academy Media City, Prestwood Road M6 8GG'
