--- a/app/views/appeal/proofs-of-evidence/index.html
+++ b/app/views/appeal/proofs-of-evidence/index.html
@@ -21,7 +21,12 @@
       {{ title }}
     </h1>
 
-    {% set version = "1" %}
+
+    <p class="govuk-body">
+      Main parties can tell us what witnesses they want to bring to an inquiry and what evidence will be heard.
+    </p>
+
+    {% set version = "2" %}
 
     <h2 class="govuk-heading-m">
       Version {{version}}
@@ -31,28 +36,38 @@
       }) }}
     </h2>
 
-    <p class="govuk-body">
-      Main parties can tell us what witnesses they want to bring to an inquiry and what evidence will be heard.
-    </p>
-
-    <!-- <p>
-      Researched May 2023<br>
-      <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1184858113" class="govuk-link">
-        Confluence user research notes
-      </a>
-    </p> -->
-
-    <!-- <p class="govuk-!-margin-bottom-2">List of proposed changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>
-        use a code instead of a link to confirm the email address
-      </li>
-    </ul> -->
-
     {{ govukButton({
       html: 'View prototype',
       href: '/appeal/proofs-of-evidence/'+'v'+version+'/before-you-continue',
       isStartButton: true
+    }) }}
+
+    {% set v1HTML %}
+
+      {% set version = "1" %}
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: '/appeal/proofs-of-evidence/'+'v'+version+'/before-you-continue',
+        isStartButton: true
+      }) }}
+
+    {% endset -%}
+
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-9',
+      items: [
+
+        {
+          heading: {
+            html: 'Version 1 <strong class="govuk-tag govuk-tag--yellow govuk-!-margin-left-2">In progress</strong>'
+          },
+          content: {
+            html: v1HTML
+          }
+        }
+      ]
     }) }}
 
   </div>
