Proof of evidence content update + dashboard tab labels content change

--- a/app/views/_includes/appellant/current-appeals.html
+++ b/app/views/_includes/appellant/current-appeals.html
@@ -1,7 +1,7 @@
 {% if data['current-appeals'] == 'no' %}
 
   <h2 class="govuk-heading-l">
-    My appeals
+    Your appeals
   </h2>
 
   <p class="govuk-body">
@@ -12,7 +12,7 @@
 
   {{ govukTable({
     classes: 'govuk-!-margin-top-3',
-    caption: 'Appeals in progress',
+    caption: 'Your appeals',
     captionClasses: 'govuk-table__caption--l',
     firstCellIsHeader: false,
     head: [
