--- a/app/views/appeal/more-than-one-appeal/v5/your-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/your-appeals.html
@@ -58,7 +58,7 @@
             }
           },
           {
-            label: "Submitted",
+            label: "Waiting for review",
             id: "submitted-appeals",
             panel: {
               html: submittedAppealsList
