--- a/app/views/appeal/proofs-of-evidence/v2/before-you-continue.html
+++ b/app/views/appeal/proofs-of-evidence/v2/before-you-continue.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Tell us about your witnesses and inquiry evidence' %}
+{% set title = 'Submit your witnesses and proof of evidence' %}
 
 {% set back = false %}
 {% set return = false %}
@@ -12,31 +12,11 @@
   </h1>
 
   <p class="govuk-body">
-    (information about what you need to tell us)
+    Upload your proof of evidence as one document to help when you speak at the inquiry.
   </p>
 
-  <!-- <ul class="govuk-list govuk-list--bullet">
-    <li>
-      appeal statement
-    </li>
-    <li>
-      planning application form
-    </li>
-    <li>
-      site plan for the appeal site
-    </li>
-    <li>
-      plans, drawings and supporting documents for your application
-    </li>
-    <li>
-      design and access statement, if you have one
-    </li>
-    <li>
-      application decision letter from your local authority, if you have one
-    </li>
-    <li>
-      draft statement of common ground, if you need one
-    </li>
-  </ul> -->
+  <p class="govuk-body">
+    You must submit your evidence at least 4 weeks before the inquiry date. Do not add any new evidence.
+  </p>
 
 {% endblock %}
