--- a/app/views/appeal/proofs-of-evidence/v2/witness-check.html
+++ b/app/views/appeal/proofs-of-evidence/v2/witness-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Do you want to start a new appeal or return to a saved appeal?' %}
+{% set title = 'Do you need to add any witnesses?' %}
 
 {% block questions %}
   {{ govukRadios({
@@ -17,12 +17,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('witness-check','Start a new appeal')
+        checked: checked('witness-check','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('witness-check','Return to a saved appeal')
+        checked: checked('witness-check','No')
       }
     ]
   }) }}
