--- a/app/views/manage/appeals/v7/index.html
+++ b/app/views/manage/appeals/v7/index.html
@@ -124,7 +124,7 @@
             }
           },
           {
-            label: "Submitted",
+            label: "Waiting for review",
             id: "submitted-appeals",
             panel: {
               html: submittedAppeals
