--- a/app/views/appeal/proofs-of-evidence/v2/upload-witness-proofs.html
+++ b/app/views/appeal/proofs-of-evidence/v2/upload-witness-proofs.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Upload all evidence' %}
+{% set title = 'Upload your witnesses and their evidence' %}
 
 {% block questions %}
 
@@ -22,8 +22,24 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        html: '<p class="govuk-body">You can find the date on the letter confirming your application</p>
-        <p class="govuk-hint">The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB</p>'
+        html: '<p class="govuk-body">Upload a file that includes:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            the names of your witnesses
+          </li>
+          <li>
+            witness postnominals (the letters after their names)
+          </li>
+          <li>
+            a summary of the evidence for each witness
+          </li>
+          <li>
+            how long you expect your witnesses to sit for at the inquiry
+          </li>
+        </ul>
+        <p class="govuk-body">Each witness should present different evidence.</p>
+        <p class="govuk-body">Do not include personal or financial information, like National Insurance numbers or credit card details.</p>
+        <p class="govuk-hint">Files must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB</p>'
       },
       attributes: { multiple: '' }
     }) }}
