--- a/app/views/index.html
+++ b/app/views/index.html
@@ -158,6 +158,9 @@
           <a href="interested/find-appeal/v8/appeal-search-address">Find an appeal</a>
         </li>
         <li>
+          <a href="interested/find-appeal/v8/appeal-search-no-results">No results</a>
+        </li>
+        <li>
           <a href="interested/comment/v8/your-name">Comment on an appeal</a>
         </li>
       </ul>
