Content update to proofs of evidence

--- a/app/views/appeal/proofs-of-evidence/v2/upload-witness-proofs.html
+++ b/app/views/appeal/proofs-of-evidence/v2/upload-witness-proofs.html
@@ -22,7 +22,7 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        html: '<p class="govuk-body">Upload a file that includes:</p>
+        html: '<p class="govuk-body">Upload one file that includes:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>
             the names of your witnesses
@@ -34,9 +34,13 @@
             a summary of the evidence for each witness
           </li>
           <li>
+            the evidence for each witness
+          </li>
+          <li>
             how long you expect your witnesses to sit for at the inquiry
           </li>
         </ul>
+
         <p class="govuk-body">Each witness should present different evidence.</p>
         <p class="govuk-body">Do not include personal or financial information, like National Insurance numbers or credit card details.</p>
         <p class="govuk-hint">Files must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB</p>'
