--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -25,7 +25,7 @@
       This is the on-going design work for interested parties, finding and commenting on an appeal. Includes appeals at different stages, open, closed and completed.
     </p>
 
-    {% set version = "8" %}
+    {% set version = "9" %}
 
     <h2 class="govuk-heading-m">
       Version {{version}}
@@ -40,9 +40,21 @@
     </p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>content updates</li>
-      <li>comment screen has more positive guidance on comments</li>
-      <li>synced up find/comments version folders</li>
+      <li>
+        content updates
+      </li>
+      <li>
+        ‘find’ an appeal rather than ‘search for’
+      </li>
+      <li>
+        updated no results page
+      </li>
+      <li>
+        aligned decided appeals page
+      </li>
+      <li>
+        moving the appeal ref to the first column on the results page
+      </li>
     </ul>
 
     {{ govukButton({
@@ -50,6 +62,28 @@
       href: 'find-appeal/v'+version+'/guidance',
       isStartButton: true
     }) }}
+
+    {% set v8HTML %}
+
+      {% set version = "8" %}
+
+      <p class="govuk-body">
+        Changes:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>content updates</li>
+        <li>comment screen has more positive guidance on comments</li>
+        <li>synced up find/comments version folders</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'find-appeal/v'+version+'/guidance',
+        isStartButton: true
+      }) }}
+
+    {% endset -%}
 
     {% set v7HTML %}
 
@@ -114,12 +148,8 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>moved the work to the new prototype (<a href="https://appeals-prototype-archive.herokuapp.com/interested-party/v4/guidance" class="govuk-link govuk-link--no-visited-state">see version 4</a>)</li>
-        <li>invite to comment and GOVUK guidance entry points</li>
-        <li>updated to align with newer service</li>
-        <li>updated tag colours to align them with GDS style</li>
-        <li>leads with address search</li>
-        <li>added confirmation email</li>
+        <li>
+
       </ul>
 
       {{ govukButton({
@@ -135,6 +165,14 @@
       classes: 'govuk-!-margin-top-9',
       items: [
 
+        {
+          heading: {
+            html: 'Version 8 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v8HTML
+          }
+        },
         {
           heading: {
             html: 'Version 7 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
