--- a/app/views/_includes/lpa/s78-questionnaire.html
+++ b/app/views/_includes/lpa/s78-questionnaire.html
@@ -2,7 +2,7 @@
   Appeal questionnaire
 </h2> -->
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Constraints, designations and other issues
 </h3>
 
@@ -129,7 +129,7 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Environmental impact assessment
 </h3>
 
@@ -164,7 +164,7 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Notifying people about the application
 </h3>
 
@@ -209,7 +209,7 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Consultation responses and representations
 </h3>
 
@@ -254,7 +254,7 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Planning officer’s report and supplementary documents
 </h3>
 
@@ -310,7 +310,7 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Site access
 </h3>
 
@@ -378,7 +378,7 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-l">
+<h3 class="govuk-heading-m">
   Appeal process
 </h3>
 
