--- a/app/views/index.html
+++ b/app/views/index.html
@@ -86,6 +86,15 @@
       </h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Appeal details
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="/manage/appeals/v8/appeal-details">New appeal</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
         Access and emails about appeals
       </h3>
       <ul class="govuk-list govuk-list--bullet">
