Appeal detail states (for LPA)

--- a/app/assets/sass/pins/pins_tables.scss
+++ b/app/assets/sass/pins/pins_tables.scss
@@ -1,3 +1,5 @@
+// row css
+
 .pins-summary-list__row--last {
 	border-bottom: none;
 	border-bottom: 0;
@@ -7,6 +9,8 @@
 .pins-govuk-table__row--last th {
 	border-bottom: none;
 }
+
+// summary list css
 
 .pins-summary-list--bottomless {
 	border-bottom: 0;
