--- a/app/views/index.html
+++ b/app/views/index.html
@@ -90,8 +90,51 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/appeals/v8/appeal-details">New appeal</a>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+            New appeal
+          </a>
         </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+            Questionnaire due
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+            Questionnaire done
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+            LPA statement done
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&appellant-final-comments=due&evidence=&appeal-decided=">
+            All statements done / final comments due
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=">
+            LPA final comments done
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=">
+            All final comments done
+          </a>
+        </li>
+        <li>
+          <!-- <a href="?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided="> -->
+            Appeal with proofs of evidence
+          <!-- </a> -->
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete">
+            Appeal decided
+          </a>
+        </li>
+
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
